--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
 	"version": "0.0.1",
 	"author": "Mohamed Mousa",
 	"description": "A project that does something awesome",
+	"keywords": [ "descriptive", "related", "words" ],
+
 	"dependencies": {
 		"express": "^4.14.0"
 	},
