--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.1",
 	"author": "Mohamed Mousa",
 	"description": "A project that does something awesome",
-	"keywords": [ "descriptive", "related", "words" ],
+	"keywords": [ "freecodecamp", "related", "words" ],
 
 	"dependencies": {
 		"express": "^4.14.0"
