--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"keywords": [ "freecodecamp", "related", "words" ],
 	"license": "MIT",
 	"dependencies": {
+		"@freecodecamp/example":"1.1.0",
 		"express": "^4.14.0"
 	},
 	"main": "server.js",
